--- a/week7/index.html
+++ b/week7/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Document</title>
     <link rel="stylesheet" href="bk.css">
 </head>
+
 <body>
     <header>
         <ul>
@@ -12,7 +14,7 @@
         </ul>
     </header>
     <h1>Home</h1>
-    <img src="cat01.jpg">
+    <img src="cat01.jpg" class="features">
     <img src="cat02.jpg">
     <!-- <div class = "cellBoard">
         <div class="cellRow">
@@ -33,7 +35,7 @@
                 <div class="cellCol cellHover" style="display:none">9</div>
             </div>
     </div> -->
-    
+
 
     <script src="click.js"></script>
     <!-- <script>
@@ -42,4 +44,5 @@
         }
     </script> -->
 </body>
+
 </html>
