--- a/week7/puzzle.html
+++ b/week7/puzzle.html
@@ -30,12 +30,13 @@
         <div class="cellRow">
             <div id="id7" class="cellCol cellHover" onclick="testOnClick(7)">7</div>
             <div id="id8" class="cellCol cellHover" onclick="testOnClick(8)">8</div>
-            <div class="cellCol cellHover" style="display:none">9</div>
+            <div id="id0" class="cellCol cellHover" onclick="testOnClick(0)">0</div>
         </div>
     </div>
 
 
     <script src="click.js"></script>
+    <script src="domTest.js"></script>
     <!-- <script>
         function testOnClick(){
             alert("点击鼠标左键");
