--- a/期中/puzzle.html
+++ b/期中/puzzle.html
@@ -8,6 +8,7 @@
     <title>Game</title>
     <link rel="stylesheet" href="css/puzzle-bk.css">
     <link rel="stylesheet" href="css/puzzle-cell.css">
+    <!-- <link rel="stylesheet" href="css/log.css"> -->
 
     <style>
         section {
@@ -18,8 +19,6 @@
 
         header {
             margin: 0;
-
-
         }
 
         footer {
@@ -43,6 +42,7 @@
                 <li><a href="index.html">Home</a></li>
                 <!-- <li><a href="puzzle-v0.2.html">Puzzle</a></li>
                 <li><a class="active" href="test.html">Test</a></li> -->
+                <!-- <li><a href="test.html">Test</a></li> -->
             </ul>
 
         </nav>
@@ -63,9 +63,9 @@
         </div>
         <!--按钮-->
         <div class="div-btn">
-            <button class="btn" onclick="initCells()">Init</button>
+            <button class="btn" onclick="initCells()">初始化</button>
             <br>
-            <button class="btn" onclick="test()">Test</button>
+            <button class="btn" onclick="test()">乱序</button>
             <br>
             <button class="btn" onclick="printBoard()">print</button>
         </div>
