Promise和setTimeout混合使用

--- a/期中/puzzle.html
+++ b/期中/puzzle.html
@@ -67,7 +67,7 @@
             <br>
             <button class="btn" onclick="test()">乱序</button>
             <br>
-            <button class="btn" onclick="printBoard()">print</button>
+            <!-- <button class="btn" onclick="printBoard()">print</button> -->
         </div>
         <!--计数器-->
         <div class="counter">
